# BennuGD2

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENCE  LICENSE.md  README.md  WhatsNew.txt  bitbucket-pipelines.yml  build-android-deps.sh  build-linux.sh  build-sdl-for-macosx.txt  build-windows.sh  build.sh  create_android_project.sh  how-to-build.txt  ps3-elf.sh  set_vars.sh
.github/workflows/: build-and-release.yml
Toolchains/: Toolchain-cross-mingw32-linux.cmake
android_template/: local.properties
android_template/app/: build.gradle
cmake/: CMakeLists.txt
cmake/Modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL_GPU.cmake  common_defs.cmake
cmake/Toolchains/: Toolchain-cross-mingw32-linux.cmake  linux_i686.toolchain.cmake
cmake/bgdc/: CMakeLists.txt
cmake/bgdi/: CMakeLists.txt
cmake/bgdrtm/: CMakeLists.txt
cmake/libbggfx/: CMakeLists.txt
cmake/libbginput/: CMakeLists.txt
cmake/libbgload/: CMakeLists.txt
cmake/libmod_debug/: CMakeLists.txt
cmake/libmod_gfx/: CMakeLists.txt
cmake/libmod_input/: CMakeLists.txt
cmake/libmod_misc/: CMakeLists.txt
cmake/libmod_sound/: CMakeLists.txt
cmake/libsdlhandler/: CMakeLists.txt
cmake/moddesc/: CMakeLists.txt
core/: make-fakedl.sh
core/bgdc/: CMakeLists.txt  bgdc.h  bgdc.rc  c_code.c  c_data.c  c_debug.c  c_main.c  codeblock.c  codeblock.h  compiler.h  constants.c  constants.h  dcbw.c  error.c  errors.h  errors_st.h  identifier.c  identifiers.h  levelstack.c  levelstack.h  main.c  main_core.c  messages.h  procdef.h  procedure.c  segment.c  segment.h  strings.c  sysstub.c  token.c  token.h  typedef.c  varspace.c  varspace.h
core/bgdc/include/: bgdc.h  codeblock.h  messages.h  procdef.h
core/bgdc/src/: bgdc.rc  c_code.c  c_data.c  c_main.c  codeblock.c  dcbw.c  resource.h  segment.c  sysstub.c  token.c  typedef.c
core/bgdi/: CMakeLists.txt  bgdi.h  bgdi.rc  dummy.cpp  main.c  messages.h
core/bgdi/include/: bgdi.h
core/bgdi/src/: bgdi.rc  main.c  resource.h
core/bgdrtm/: CMakeLists.txt  bgdrtm.h  copy.c  dcbr.c  dirs.c  fmath.c  instance.c  interpreter.c  list.c  list.h  misc.c  strings.c  sysprocs.c  sysprocs_p.h  varspace_file.c  watch.c  watch.h
core/bgdrtm/src/: dcbr.c  dirs.c  interpreter.c  strings.c
core/common/: b_crypt.c  debug.c  files.c  xctype.c
core/include/: arrange.h  b_crypt.h  bgdcore.h  bgddl.h  commons_defs.h  dcb.h  dirs.h  dlvaracc.h  fake_dl.h  files.h  files_st.h  fmath.h  i_procdef.h  i_procdef_st.h  instance.h  instance_st.h  loadlib.h  messages_common.h  offsets.h  pslang.h  sysprocs.h  sysprocs_st.h  typedef.h  typedef_st.h  varspace_file.h  xctype.h  xctype_st.h  xstrings.h
dependencies/x86_64-apple-darwin14/: libLerc.4.dylib  libMacportsLegacySupport.dylib  libSDL2-2.0.0.dylib  libSDL2_gpu.dylib  libSDL2_image-2.0.0.dylib  libSDL2_mixer-2.0.0.dylib  libdeflate.0.dylib  libjpeg.8.dylib  liblzma.5.dylib  libmodplug.1.dylib  libogg.0.dylib  libopus.0.dylib  libopusfile.0.dylib  libsharpyuv.0.dylib  libtheora.0.dylib  libtheoradec.1.dylib  libtheoraenc.1.dylib  libtiff.6.dylib  libwebp.7.dylib  libz.1.dylib  libzstd.1.dylib
examples/01-helloworld/: 01-helloworld.prg
examples/02-mouse/: 02-mouse.prg
examples/03-test_key_event/: 03-test_key_event.prg
examples/04-sprite/: 04-sprite.prg
examples/05-spritesheet/: 05-spritesheet.prg  sprsheet.inc
examples/06-font/: 06-font.prg
examples/07-fontsheet/: 07-fontsheet.prg  fontsheet.inc
examples/08-huge-map/: 08-huge-map.prg
examples/09-draw/: 09-draw.prg
examples/10-pathfind/: 10-pathfind.prg
examples/11-test_joy/: 11-test_joy.prg
examples/ads/: ads.prg
modules/libbggfx/: CMakeLists.txt  bitwise_map.h  g_base.h  g_bitmap.c  g_bitmap.h  g_blit.c  g_blit.h  g_clear.c  g_clear.h  g_draw.c  g_draw.h  g_fade.c  g_fade.h  g_font.c  g_font.h  g_frame.c  g_frame.h  g_grlib.c  g_grlib.h  g_instance.c  g_instance.h  g_media.c  g_media.h  g_media_theora.c  g_media_theora.h  g_object.c  g_object.h  g_pathfind.c  g_pathfind.h  g_pixel.c  g_pixel.h  g_region.h  g_regions.c  g_regions.h  g_screen.c  g_screen.h  g_scroll.c  g_scroll.h  g_shaders.c  g_shaders.h  (+10 more)
modules/libbginput/: CMakeLists.txt  i_joy.c  i_joy.h  i_key.c  i_key.h  i_mouse.c  i_mouse.h  i_sensors.c  i_sensors.h  i_touch.c  i_touch.h  libbginput.c  libbginput.h  libbginput_exports.h
modules/libbgload/: CMakeLists.txt  bgload.c  bgload.h
modules/libbgsound/: CMakeLists.txt  libbgsound.c  libbgsound.h
modules/libmod_ads/: AdsModule.java  Android.mk  CMakeLists.txt  README.md  libmod_ads.c  libmod_ads.h  libmod_ads_exports.h
modules/libmod_debug/: CMakeLists.txt  libmod_debug.c  libmod_debug.h  libmod_debug_exports.h  m_debug.c  m_debug.h
modules/libmod_gfx/: CMakeLists.txt  file_div.c  file_div.h  libmod_gfx.c  libmod_gfx.h  libmod_gfx_exports.h  m_bgload.c  m_bgload.h  m_collision.c  m_collision.h  m_collision_process_exec_hook.h  m_draw.c  m_draw.h  m_fade.c  m_fade.h  m_fnt.c  m_fnt.h  m_fpg.c  m_fpg.h  m_map.c  m_map.h  m_map_finalize.h  m_map_initialize.h  m_mathgfx.c  m_mathgfx.h  m_media.c  m_media.h  m_pathfind.c  m_pathfind.h  m_resolxy.h  m_rgba.c  m_rgba.h  m_screen.c  m_screen.h  m_scroll.c  m_scroll.h  m_shaders.c  m_shaders.h  m_text.c  m_text.h  (+3 more)
modules/libmod_iap/: Android.mk  CMakeLists.txt  IAPModule.java  libmod_iap.c  libmod_iap.h  libmod_iap_exports.h
modules/libmod_input/: CMakeLists.txt  libmod_input.c  libmod_input_exports.h
modules/libmod_misc/: CMakeLists.txt  libmod_misc.c  libmod_misc.h  libmod_misc_exports.h  m_crypt.c  m_crypt.h  m_dir.c  m_dir.h  m_file.c  m_file.h  m_list.c  m_list.h  m_math.c  m_math.h  m_mem.c  m_mem.h  m_proc.c  m_proc.h  m_rand.c  m_rand.h  m_regex.c  m_regex.h  m_say.c  m_say.h  m_sort.c  m_sort.h  m_string.c  m_string.h  m_sys.c  m_sys.h  m_time.c  m_time.h  regex.c  regex.h
modules/libmod_net/: CMakeLists.txt  libmod_net.c  libmod_net.h  libmod_net_exports.h  net.c  net.h
modules/libmod_socks/: CMakeLists.txt  libmod_socks.c  libmod_socks.h  libmod_socks_exports.h  tcp.c  tcp.h  udp.c  udp.h
tools/: compress_gfx.prg  show_pal.prg
(+291 files in other folders)
